Remove extra padding outside viewport to prevent horizontal scrolling

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -42,8 +42,8 @@
 }
 
 .bodycontent{
-  padding-left: 10%;
-  padding-right: 10%;
+  max-width: 1280px;
+  padding: 50px 0;
 }
 
 .navbar {
